# mikrotik-radius-lab

./: .gitignore  README.md  run.sh  test-radius.py
configs/: mikrotik-hotspot.rsc  mikrotik-logging.rsc
configs/hotspot-html/: alogin.html  login.html  logout.html  status.html
mikrotik-ingester/: Cargo.toml  README.md  docker-compose.yml
mikrotik-ingester/migrations/: V001__init.sql
mikrotik-ingester/src/: config.rs  listener.rs  main.rs  migrate.rs  mikrotik.rs  model.rs  pipeline.rs
radius-server/: Cargo.toml
radius-server/src/: audit.rs  main.rs
radius-server/templates/: base.html  login.html  logout.html  register.html  sessions.html  status.html  welcome.html
